# androidjnipp

./: .gitignore  CMakeLists.txt  NOTICE  README.md
android/: CMakeLists.txt  String.cpp
android/JNI/: BooleanJNI.cpp  HashMapJNI.cpp  IntegerJNI.cpp  LongJNI.cpp  PointJNI.cpp  RectJNI.cpp  StringJNI.cpp  VectorJNI.cpp
android/JNI/android/graphics/: Point.h  Rect.h
android/JNI/java/lang/: Boolean.h  Integer.h  Long.h  String.h
android/JNI/java/util/: HashMap.h  Vector.h
android/android/graphics/: Point.h  Rect.h
android/java/lang/: Boolean.h  Integer.h  Long.h  String.h
android/java/util/: HashMap.h  Vector.h
androidjni/: Abbreviations.h  AnyObject.h  CMakeLists.txt  GlobalRef.h  JNIExportMacros.h  JNIIncludes.h  LocalRef.h  NativeObject.h  PassLocalRef.h  ReferenceFunctions.h  WeakGlobalRef.h
androidjni/android/: Boolean.cpp  HashMap.cpp  Integer.cpp  Long.cpp  Point.cpp  Rect.cpp  Vector.cpp
androidjni/android/java/lang/: Integer.h  Long.h  String.h
androidjni/android/java/util/: Vector.h
androidjni/androidjni/: BooleanJNI.cpp  HashMapJNI.cpp  IntegerJNI.cpp  LongJNI.cpp  PointJNI.cpp  RectJNI.cpp  StringJNI.cpp  VectorJNI.cpp
androidjni/androidjni/java/lang/: String.h
androidjni/androidjni/java/util/: Vector.h
androidjni/annotations/: CMakeLists.txt  androidjni_annotations_manifest.xml
androidjni/annotations/src/labs/naver/androidjni/: AbstractMethod.java  AccessedByNative.java  CalledByNative.java  NativeConstructor.java  NativeDestructor.java  NativeExportMacro.java  NativeNamespace.java  NativeObjectField.java
androidjni/interfaces/: Integer.in  Long.in  Point.in  Vector.in
androidjni/scripts/: lextab.py  parsetab.py
cmake/: HelperMacros.cmake  OptionsAndroid.cmake  OptionsWindows.cmake  android.toolchain.cmake
generator/interfaces/: Boolean.in  HashMap.in  Rect.in  String.in
generator/scripts/: interface-generator.py
test/: CMakeLists.txt
test/testapp/: CMakeLists.txt
test/testapp/android/: AndroidManifest.xml
test/testapp/android/src/com/example/test/: StringGenerator.java  StringGeneratorClient.java  TestActivity.java
test/testapp/win32/: WinMain.cpp
test/testlib/: CMakeLists.txt  StringGeneratorClientNatives.cpp  StringGeneratorNatives.cpp  TestLibPrefix.h
test/testlib/android/: JNIMain.cpp
test/testlib/generic/: StringGenerator.cpp  StringGeneratorClient.cpp  StringGeneratorClientManaged.cpp  StringGeneratorManaged.cpp
test/testlib/win32/: DLLMain.cpp
